Fix vertical alignment.

--- a/www/css/game.css
+++ b/www/css/game.css
@@ -26,8 +26,8 @@ html, body {
     padding: 0;
     top: 50%;
     margin: 0;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
 }
 
 p.note {
